--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+{% load static %}
 <head>
 	<title>{% block title %}{% endblock %}</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
 </head>
 <body>
