--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -1,20 +1,19 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="navbar-nav mx-auto col-4">
-        <li class="nav-item nav-link text-uppercase fw-bold col-12 text-center bg-danger">
-          <a class="nav-link" aria-current="page" href="#">Отзывы</a>
-        </li>
-        <li class="nav-item nav-link text-uppercase fw-bold col-12 text-center bg-success ">
-          <a class="nav-link" href="#">Каталог</a>
-        </li>
-        <li class="nav-item nav-link text-uppercase fw-bold col-12 text-center bg-danger">
-          <a class="nav-link" href="#">Регистрация</a>
-        </li>
-      </ul>
-    </div>
+
+<nav class="navbar navbar-expand-md navigation_bar">
+  <div class="container">
+        <button class="navbar-toggler m-2 border-dark" data-bs-toggle="collapse" data-bs-target="#navbar">click</button>
+        <div class="collapse navbar-collapse justify-content-between" id="navbar">
+            <ul class="navbar-nav nav-fill w-100">
+                <li class="nav-item">
+                    <a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">отзывы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">каталог</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">регистрация</a>
+                </li>
+            </ul>
+        </div>
   </div>
 </nav>
