Full home page django off

--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -35,9 +35,13 @@
 	</div>
 		<div class="row text-center border-bottom border-secondary pb-5">
 			<div class="container text-center mx-auto">
-				<img src="{% static 'images/product_main_page.png' %}" class="image_mainpage" style="max-width: 90%;">
+				<img src="{% static 'images/product_main_page.png' %}" class="image_mainpage mt-5" style="max-width: 90%;">
 			</div>
 		</div>
-
+		<div class="row">
+			<h1 class="text-uppercase header_main col-sm-12 col-md-8 col-lg-8 text-center mx-auto py-3">
+				Связаться со мной для заказа можно с помощью:
+			</h1>
+		</div>
 
 {% endblock %}
