--- a/shop/templates/footer.html
+++ b/shop/templates/footer.html
@@ -1,12 +1,28 @@
 {% load static %}
-
+		<div class="row border-top border-secondary">
+			<h1 class="text-uppercase header_main col-sm-12 col-md-8 col-lg-8 text-center mx-auto py-3">
+				Связаться со мной для заказа можно с помощью:
+			</h1>
+		</div>
 <div class="row text-center">
 	<div class="mx-auto">
-		<img src="{% static 'images/icons8-facebook-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
-		<img src="{% static 'images/icons8-instagram-старый-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
-		<img src="{% static 'images/icons8-whatsapp-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
-		<img src="{% static 'images/icons8-вконтакте-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
-		<img src="{% static 'images/icons8-гугл-плюс-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
-		<img src="{% static 'images/icons8-одноклассники-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
+		<a href="#" class="my_link mx-4">
+			<img src="{% static 'images/icons8-facebook-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1" style="max-width: 4em">
+		</a>
+		<a href="#" class="my_link mx-4">
+			<img src="{% static 'images/icons8-instagram-старый-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1" style="max-width: 4em">
+		</a>
+		<a href="#" class="my_link">
+			<img src="{% static 'images/icons8-whatsapp-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1 mx-4" style="max-width: 4em">
+		</a>
+		<a href="#" class="my_link mx-4">
+			<img src="{% static 'images/icons8-вконтакте-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1" style="max-width: 4em">
+		</a>
+		<a href="#" class="my_link mx-4">
+			<img src="{% static 'images/icons8-гугл-плюс-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1" style="max-width: 4em">
+		</a>
+		<a href="#" class="my_link mx-4">
+			<img src="{% static 'images/icons8-одноклассники-filled-100.svg' %}" class="col-sm-2 col-md-1 col-lg-1" style="max-width: 4em">
+		</a>
 	</div>
 </div>
