--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -4,15 +4,29 @@
 
 {% block title %}Главная{% endblock %}
 
+{% block nav1 %}
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">отзывы</a>
+{% endblock %}
+{% block nav2 %}
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{{'catalogue'}}">каталог</a>
+{% endblock %}
+{% block nav3 %}
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">регистрация</a>
+{% endblock %}
+
 {% block content %}
 	<div class="row">
 		<div class="col-sm-12 col-md-6 col-lg-6 text-center pt-3 pb-5 border-end border-bottom border-secondary">
 			<h1 class="header_main py-3">Актуальное</h1>
-			<img src="{% static 'images/avon_sales.jpg' %}">
+			<!-- {% for actual in actuals %} -->
+				<img src="{% static 'images/avon_sales.png' %}">
+			<!-- {% endfor %} -->
 		</div>
 		<div class="col-sm-12 col-md-6 col-lg-6 text-center pt-5 border-start border-bottom border-secondary">
 			<h1 class="header_main my-5 pt-5">Baranova TV</h1>
-			<p class="paragraph_main fs-4">Меня зовут Ольга, и я занимаюсь продажей продукции Avon.</p>
+			<p class="paragraph_main fs-4">
+				Меня зовут Ольга, и я занимаюсь продажей продукции Avon.
+			</p>
 		</div>
 	</div>
 	<div class="row">
@@ -21,12 +35,12 @@
 		</h1>
 	</div>
 	<div class="container text-center">
-		{% for i in '123' %}
+		{% for paragraph in paragraph %}
 
 			<div class="row mx-auto">
-				<div class="m-4 bg-white">
+				<div class="m-4 bg-white" style="min-height:100px">
 					<p class="paragraph_main fs-4">
-						При регистрации в этом каталоге и размещении заказа на сумму 999руб вы получите скидку 30%.
+						{{ paragraph.text }}
 					</p>
 				</div>
 			</div>
@@ -38,10 +52,6 @@
 				<img src="{% static 'images/product_main_page.png' %}" class="image_mainpage mt-5" style="max-width: 90%;">
 			</div>
 		</div>
-		<div class="row">
-			<h1 class="text-uppercase header_main col-sm-12 col-md-8 col-lg-8 text-center mx-auto py-3">
-				Связаться со мной для заказа можно с помощью:
-			</h1>
-		</div>
+
 
 {% endblock %}
