--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -18,9 +18,9 @@
 	<div class="row">
 		<div class="col-sm-12 col-md-6 col-lg-6 text-center pt-3 pb-5 border-end border-bottom border-secondary">
 			<h1 class="header_main py-3">Актуальное</h1>
-			<!-- {% for actual in actuals %} -->
-				<img src="{% static 'images/avon_sales.png' %}">
-			<!-- {% endfor %} -->
+			{% for actual in actuals %}
+				<img src="{{ actual.image.url }}">
+			{% endfor %}
 		</div>
 		<div class="col-sm-12 col-md-6 col-lg-6 text-center pt-5 border-start border-bottom border-secondary">
 			<h1 class="header_main my-5 pt-5">Baranova TV</h1>
