Product page & links by category

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -26,6 +26,9 @@
 			background: transparent;
 			border-color: transparent;
 		}
+		.category_heading:hover{
+		    background-color: #7b7270 !important;
+		}
 		.card_text p{
 			color: #434343;
 			letter-spacing: 0.04em;
