--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 
-	
+{% block nav %}	
 <nav class="navbar navbar-expand-md navigation_bar">
   <div class="container">
         <button class="navbar-toggler m-2 border-dark" data-bs-toggle="collapse" data-bs-target="#navbar">click</button>
@@ -62,11 +62,10 @@
         </div>
   </div>
 </nav>
-
+{% endblock %}
 	{% block content %}
 	{% endblock %}
 
-	{% include 'footer.html' %}
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
