--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -11,7 +11,7 @@
 	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{{'catalogue'}}">каталог</a>
 {% endblock %}
 {% block nav3 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">регистрация</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'sign_up' %}">регистрация</a>
 {% endblock %}
 
 {% block content %}
@@ -53,5 +53,8 @@
 			</div>
 		</div>
 
+{% include 'footer.html' %}
+
 
 {% endblock %}
+
