--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -39,6 +39,14 @@
 			text-transform: uppercase;
 			letter-spacing: 0.04em;
 		}
+		.form_for_style input{
+			padding: 0.6em;
+			opacity: 0.7;
+			text-align: center;
+			background-color: #434343;
+			color: #fff;
+			border-radius: 4em;
+		}
     </style>
 </head>
 <body>
