--- a/shop/templates/sign_up.html
+++ b/shop/templates/sign_up.html
@@ -1,20 +1,25 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}Регистрация{% endblock %}
 {% block nav %}
 {% endblock %}
 
-<form method="post">
-	{% csrf_token %}
-	{{ form }}
-	<input type="submit" value="Submit">
-</form>
+
 
 
 
 {% block content %}
+<h1 class="text-center header_main border-bottom border-secondary p-3" style="text-transform: uppercase;">Регистрация</h1>
+<div class="container form_for_style" style="text-transform: uppercase;">
+	<form method="post" class="col-sm-12 col-md-6 col-lg-6 mx-auto text-center m-3">
+		{% csrf_token %}
+		<p>{{form | crispy}}</p>
+		<input type="submit" value="Зарегистрироваться">
+	</form>
+</div>
 
 {% endblock %}
 
