Connection with all pages

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -45,7 +45,10 @@
 			text-align: center;
 			background-color: #434343;
 			color: #fff;
-			border-radius: 4em;
+			border-radius: 1.1em;
+		}
+		.login_card input{
+			text-align: center;
 		}
     </style>
 </head>
