--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -5,13 +5,21 @@
 {% block title %}Главная{% endblock %}
 
 {% block nav1 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="#">отзывы</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'review' %}">отзывы</a>
 {% endblock %}
 {% block nav2 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{{'catalogue'}}">каталог</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'catalogue' %}">каталог</a>
 {% endblock %}
 {% block nav3 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'sign_up' %}">регистрация</a>
+	{% if request.user.is_authenticated and request.user.first_name %}
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'sign_out' %}">Выйти</a>
+
+	{% else %}
+		<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'login' %}">аккаунт</a>
+
+	{% endif %}
+
+
 {% endblock %}
 
 {% block content %}
@@ -38,7 +46,8 @@
 		{% for paragraph in paragraph %}
 
 			<div class="row mx-auto">
-				<div class="m-4 bg-white" style="min-height:100px">
+				<div class="m-4 bg-white" style="min-height:100px; box-shadow: 0 0 5px rgba(0,0,0,0.5);
+   } ">
 					<p class="paragraph_main fs-4">
 						{{ paragraph.text }}
 					</p>
