--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -50,6 +50,77 @@
 		.login_card input{
 			text-align: center;
 		}
+		.header_review_name{
+			background: rgba(67, 67, 67, 0.7);
+			border-radius: 30px;
+			color: #fff;
+			font-style: normal;
+			font-weight: 300;
+		}
+		.review_text{
+			color: #000;
+		}
+		.review_date{
+			text-align: right;
+			color: #000;
+		}
+		.register_button{
+			text-decoration: none;
+			text-transform: uppercase;
+			margin: 0 2em;
+			background: #6C757D !important;
+			box-shadow: none !important;
+			border: none !important;
+			color: #fff !important;
+			padding: 0.6em;
+			opacity: 1 !important;
+			text-align: center;
+			background-color: #434343;
+			color: #fff;
+			border-radius: 0.5em !important;
+			letter-spacing: 0.1em;
+		}
+		.register_button:hover{
+			background: #5C636A !important;
+		}
+		.review_form textarea{
+			background: rgba(245, 233, 229, 0.9);
+			max-height: 150px;
+			min-height: 150px;
+			font-weight: 300;
+			color: #000 !important;
+		}
+		.review_form input{
+			margin: 1em 0;
+			background: rgba(245, 233, 229, 0.9);
+			border-radius: 2em;
+			text-align: center;
+			font-weight: 300;
+			color: #000;
+		}
+		.review_form{
+			background: rgba(67, 67, 67, 0.7);
+		}
+		.review_button{
+			text-decoration: none;
+			text-transform: uppercase;
+			margin: 0 2em;
+			background: #6C757D !important;
+			box-shadow: none !important;
+			border: none !important;
+			color: #fff !important;
+			padding: 0.6em;
+			opacity: 1 !important;
+			text-align: center;
+			background-color: #f2f2f2 !important;
+			opacity: 0.8;
+			color: #000 !important;
+			border-radius: 4em !important;
+			letter-spacing: 0.1em;
+		}
+		.review_button:hover{
+			background-color: #fff !important;
+		}
     </style>
 </head>
 <body>
