--- a/shop/templates/login.html
+++ b/shop/templates/login.html
@@ -29,7 +29,7 @@
                     Новый аккаунт
                 </h2>
                 <br>
-                <a href="{% url 'home' %}" class="btn btn-secondary">
+                <a href="{% url 'sign_up' %}" class="btn btn-secondary">
                     Зарегистрироваться
                 </a>
             </div>
