--- a/shop/templates/review.html
+++ b/shop/templates/review.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block title %}Главная{% endblock %}
+{% load crispy_forms_tags %}
 
 {% block nav1 %}
 	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'catalogue' %}">каталог</a>
@@ -22,3 +23,39 @@
 {% endblock %}
 
 <!-- TODO: отзывы -->
+
+{% block content %}
+{% for comment in comments %}
+    <div class="container col-lg-8 col-md-8 colsm-10 mt-5 pt-3 pb-1" style="background: rgba(255, 255, 255, 0.6);">
+		<h5 class="text-center header_review_name col-lg-8 col-md-8 col-sm-10 p-1 mx-auto">ОТЗЫВ ОТ: <b>{{ comment.name }}</b></h5>
+		<p class="review_text pt-3">
+			{{ comment.text|linebreaks }}
+		</p>
+		<p class="review_date col-12">
+			{{ comment.created }}
+		</p>
+	</div>
+{% empty %}
+    <h5 class="mx-auto text-center mt-5 card_text">Оставьте отзыв первым.</h5>
+{% endfor %}
+	
+	<!-- <div class="container form_for_style" style="text-transform: uppercase;"> -->
+	{% if new_comment %}
+    	<h2>Ваш отзыв был добавлен.</h2>
+	{% else %}
+		<div class="container col-lg-8 col-md-8 colsm-10 mt-5 mb-5 pt-3 pb-1 review_form">
+			<form method="post" class="col-sm-12 col-md-10 col-lg-10 mx-auto text-center">
+				{% csrf_token %}
+				<p class="my-1">{{form | crispy}}</p>
+				<a href="{% url 'review' %}">
+					<input type="submit" value="Отправить" class="review_button">
+				</a>
+			</form>
+		</div>
+	{% endif %}
+	
+</div>
+<p class="text-center color-disable" style="padding: 0; margin: 0;">Чтобы удалить Ваш отзыв, обратитесь в поддержку.</p>
+<p class="text-center color-disable mb-3" style="padding: 0; margin: 0;">Способы обращения в поддержку указаны ниже в "СВЯЗАТЬСЯ СО МНОЙ ДЛЯ ЗАКАЗА МОЖНО С ПОМОЩЬЮ"</p>
+{% include 'footer.html' %}
+{% endblock %}
