--- a/shop/templates/sign_up.html
+++ b/shop/templates/sign_up.html
@@ -13,10 +13,15 @@
 	<form method="post" class="col-sm-12 col-md-6 col-lg-6 mx-auto text-center m-3">
 		{% csrf_token %}
 		<p>{{form | crispy}}</p>
-		<input type="submit" value="Зарегистрироваться">
+		<input type="submit" value="Зарегистрироваться" class="register_button">
+		
 	</form>
 </div>
-
+<div class="text-center pt-3 pb-4">
+	<a href="{% url 'login' %}" class="register_button mx-auto mb-3">
+    	Отмена
+    </a>
+</div>
 {% endblock %}
 
 
