Start Cart again v1.0

--- a/templates/base.html
+++ b/templates/base.html
@@ -121,11 +121,20 @@
 		.review_button:hover{
 			background-color: #fff !important;
 		}
+		.cart-table{
+		    min-width: 480px;
+		    font-size: 14px;
+		}
+		.cart-icon{
+	    	text-decoration: none;
+	    	color: #868e96;
+		}
     </style>
 </head>
 <body>
 
 {% block nav %}	
+
 <nav class="navbar navbar-expand-md navigation_bar">
   <div class="container">
         <button class="navbar-toggler m-2 border-dark" data-bs-toggle="collapse" data-bs-target="#navbar">click</button>
