--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,13 @@
 {% block title %}Аккаунт{% endblock %}
 
 {% block nav1 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'review' %}">отзывы</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:review' %}">отзывы</a>
 {% endblock %}
 {% block nav2 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'home' %}">главная</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:home' %}">главная</a>
 {% endblock %}
 {% block nav3 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'catalogue' %}">каталог</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:catalogue' %}">каталог</a>
 {% endblock %}
 
 {% block content %}
@@ -29,7 +29,7 @@
                     Новый аккаунт
                 </h2>
                 <br>
-                <a href="{% url 'sign_up' %}" class="btn btn-secondary">
+                <a href="{% url 'shop:sign_up' %}" class="btn btn-secondary">
                     Зарегистрироваться
                 </a>
             </div>
