Working Catalogue & ProductDetail

--- a/templates/catalogue.html
+++ b/templates/catalogue.html
@@ -11,7 +11,7 @@
 	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'home' %}">главная</a>
 {% endblock %}
 {% block nav3 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'cart' %}">заказать</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'cart_detail' %}">заказать</a>
 {% endblock %}
 
 {% block content %}
