--- a/templates/review.html
+++ b/templates/review.html
@@ -6,17 +6,17 @@
 {% load crispy_forms_tags %}
 
 {% block nav1 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'catalogue' %}">каталог</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:catalogue' %}">каталог</a>
 {% endblock %}
 {% block nav2 %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'home' %}">главная</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:home' %}">главная</a>
 {% endblock %}
 {% block nav3 %}
 	{% if request.user.is_authenticated and request.user.first_name %}
-	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'sign_out' %}">Выйти</a>
+	<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:sign_out' %}">Выйти</a>
 
 	{% else %}
-		<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'login' %}">аккаунт</a>
+		<a class="nav-link text-uppercase fw-bold px-3 navigation_bar_item" href="{% url 'shop:login' %}">аккаунт</a>
 
 	{% endif %}
 
@@ -47,7 +47,7 @@
 			<form method="post" class="col-sm-12 col-md-10 col-lg-10 mx-auto text-center">
 				{% csrf_token %}
 				<p class="my-1">{{form | crispy}}</p>
-				<a href="{% url 'review' %}">
+				<a href="{% url 'shop:review' %}">
 					<input type="submit" value="Отправить" class="review_button">
 				</a>
 			</form>
